--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USER=postgres
-DB_PASSWORD=m@nus14sup3r
+DB_USER=username
+DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=hacktiv8_go
+DB_NAME=nama_database
 DB_SSLMODE=disable
